# Butterfly

./: .gitignore  LICENSE.md  README.md  README_cn.md  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.yml  contact.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: main.yml
public/: index.html
src/: App.vue  i18n.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/app/: app.rs  mod.rs  profile.rs  settings.rs
src-tauri/src/mod_links/: api.rs  local.rs  mod.rs  mod_links.rs  remote.rs
src/components/: ModDetails.vue  ModProfile.vue  ProfileMod.vue
