[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.4", features = [] }

[dependencies]
directories = "4.0.1"
lazy_static = "1.4.0"
log = "0.4.14"
native-dialog = "0.6.3"
quick-xml = { git = "https://github.com/Mingun/quick-xml", branch = "cdata", features = ["serialize"] }
reqwest = { version = "0.11.9", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0.2"
sha256 = "1.0.3"
tauri = { version = "1.0.0-rc.4", features = ["api-all"] }
unzip = "0.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
