[package]
name = "butterfly"
version = "0.0.1"
description = "A web-based mod installer for Hollow Knight."
authors = ["jngo102"]
license = ""
repository = ""
default-run = "butterfly"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.9", features = [] }

[dependencies]
directories = "4.0.1"
futures-util = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.14"
memchr = "2.5.0"
native-dialog = "0.6.3"
open = "2.1.1"
fast-xml = { git = "https://github.com/Mingun/fast-xml", branch = "seq", features = ["serialize"] }
reqwest = { version = "0.11.9", features = ["blocking", "stream"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
simple-logging = "2.0.2"
sha256 = "1.0.3"
sysinfo = "0.23.11"
tauri = { version = "1.0.0-rc.11", features = ["api-all"] }
tokio = { version = "1.17.0", features = ["full"] }
unzip = "0.1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
