[package]
name = "butterfly"
version = "0.0.1"
description = "A web-based mod installer for Hollow Knight."
authors = ["jngo102"]
license = "MIT"
repository = "https://github.com/jngo102/Butterfly"
default-run = "butterfly"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1", features = [] }

[dependencies]
directories = "^4"
futures-util = "^0.3"
log = "^0.4"
memchr = "^2"
native-dialog = "^0.6"
num_cpus = "^1.13"
open = "^2"
quick-xml = { git = "https://github.com/tafia/quick-xml", branch = "master", features = ["serialize"] }
reqwest = { version = "^0.11", features = ["blocking", "stream"] }
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
simple-logging = "^2"
sha256 = "^1"
sysinfo = "^0.23"
tauri = { version = "^1", features = ["api-all"] }
# tokio = { version = "^1", features = ["rt"] }
threadpool = "^1.8"
unzip = "^0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
